--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "c3": "^0.7.20",
     "d3": "^7.9.0",
+    "gh-pages": "^6.1.1",
     "normalize.css": "^8.0.1"
   },
   "description": "本專案為摯陞數位科技有限公司面試測驗考題，個人答題結果。",
